<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/menu"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/brokolslur" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/brokolslur" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black" />


            <TextView
                style="style/TextContent.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:text="@string/_brocri"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/profile_image"
                    android:text="Febri Ngantang"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/profile_image"
                    android:text="Febri Ngantang"
                    android:textColor="@android:color/black" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:lineSpacingMultiplier="1"
                android:text="@string/content_text"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/ic_jam"
                android:text="@string/waktu"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                style="style/TextContent.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/bahan"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1"
                android:text="@string/bahan2"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                style="style/TextContent.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/langkah"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="sans-serif-black"
                android:text="@string/l1"
                android:textColor="@android:color/black" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="383dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/langkah1"
                    android:textColor="@color/black" />


            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/l1g1" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:adjustViewBounds="true"
                android:src="@drawable/l1g2" />
            </LinearLayout>

            <TextView
                android:layout_width="383dp"
                android:layout_height="39dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/space"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1"
                android:text="@string/l2"
                android:textColor="@android:color/black" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="383dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/langkah2"
                    android:textColor="@color/black" />


            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/l2g1" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/l2g2" />
            </LinearLayout>

            <TextView
                android:layout_width="383dp"
                android:layout_height="39dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/space"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1"
                android:text="@string/l3"
                android:textColor="@android:color/black" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="383dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/langkah3"
                    android:textColor="@color/black" />


            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/l3g1" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/l3g2" />
            </LinearLayout>

            <TextView
                android:layout_width="383dp"
                android:layout_height="39dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/space"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:fontFamily="sans-serif-black"
                android:lineSpacingMultiplier="1"
                android:text="@string/l4"
                android:textColor="@android:color/black" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="383dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/langkah4"
                    android:textColor="@color/black" />


            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="14dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/l4g1" />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/brokolslur" />
            <TextView
                android:layout_width="383dp"
                android:layout_height="39dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/space1"
                android:textColor="@color/black" />




        </LinearLayout>
    </ScrollView>
</RelativeLayout>

